--- a/uni.scss
+++ b/uni.scss
@@ -13,7 +13,7 @@
  */
 
 /* 颜色变量 */
-
+$uni-base-color:#49ADAA;
 /* 行为相关颜色 */
 $uni-color-primary: #007aff;
 $uni-color-success: #4cd964;
@@ -24,6 +24,7 @@ $uni-color-error: #dd524d;
 $uni-text-color:#333;//基本色
 $uni-text-color-inverse:#fff;//反色
 $uni-text-color-grey:#999;//辅助灰色，如加载更多的提示信息
+$uni-text-color-grey1:#666;//辅助灰色，如加载更多的提示信息
 $uni-text-color-placeholder: #808080;
 $uni-text-color-disable:#c0c0c0;
 
@@ -34,7 +35,7 @@ $uni-bg-color-hover:#f1f1f1;//点击状态颜色
 $uni-bg-color-mask:rgba(0, 0, 0, 0.4);//遮罩颜色
 
 /* 边框颜色 */
-$uni-border-color:#c8c7cc;
+$uni-border-color:#49ADAA;
 
 /* 尺寸变量 */
 
@@ -55,7 +56,7 @@ $uni-border-radius-lg: 12upx;
 $uni-border-radius-circle: 50%;
 
 /* 水平间距 */
-$uni-spacing-row-sm: 10px;
+$uni-spacing-row-sm: 10upx;
 $uni-spacing-row-base: 20upx;
 $uni-spacing-row-lg: 30upx;
 
